--- a/package.json
+++ b/package.json
@@ -8,12 +8,38 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.4",
+    "@react-native-async-storage/async-storage": "^1.15.2",
+    "@react-native-community/datetimepicker": "^3.0.4",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/drawer": "^5.12.5",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
+    "expo-font": "~8.4.0",
+    "expo-linear-gradient": "~8.4.0",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-date-picker": "^3.2.10",
+    "react-native-elements": "^3.3.2",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-location": "^2.1.0",
+    "react-native-hide-show-password-input": "^1.2.0",
+    "react-native-icons": "^0.7.1",
+    "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-modal-datetime-picker": "^9.2.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-toast-message": "^1.4.9",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
