--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
+    "expo-constants": "^9.3.5",
     "expo-font": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
     "expo-location": "~10.0.0",
+    "expo-notifications": "^0.9.0",
+    "expo-sms": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.3.3",
     "react": "16.13.1",
