--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~40.0.0",
     "expo-constants": "^9.3.5",
     "expo-font": "~8.4.0",
+    "expo-image-picker": "^10.1.4",
     "expo-linear-gradient": "~8.4.0",
     "expo-location": "~10.0.0",
     "expo-notifications": "^0.9.0",
@@ -27,14 +28,20 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-autocomplete-search": "^1.0.8",
     "react-native-date-picker": "^3.2.10",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-get-location": "^2.1.0",
     "react-native-hide-show-password-input": "^1.2.0",
     "react-native-icons": "^0.7.1",
+    "react-native-image-crop-picker": "^0.4.2",
+    "react-native-image-picker": "^3.3.2",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-modal-datetime-picker": "^9.2.0",
+    "react-native-phone-call": "^1.0.9",
+    "react-native-progress": "^4.1.2",
+    "react-native-progress-bar-animated": "^1.0.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
